fixing padding and spacing issues

--- a/css/resourciboard.css
+++ b/css/resourciboard.css
@@ -1,3 +1,7 @@
+html, body {
+	height: 100%;
+}
+
 .navbar, .navbar-spacer {
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #FFFFFF;
@@ -42,8 +46,7 @@
 	text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.7);
 }
 
-.section-heading,
-.section-description {
+.section-heading, .section-description {
   margin-bottom: 1.2rem;
 }
 
@@ -82,6 +85,10 @@
         margin-left: 0%;
     }
   /**/
+
+  .column.padding {
+    min-height: 100vh;
+  }
 
   .section.padding, .column.padding {
     padding: 12rem 0 11rem;
@@ -131,6 +138,11 @@
   color: #fff;
 }
 
+.hero, .hero .row, .hero .row .column.padding {
+	height: 100%;
+	padding: 0px;
+}
+
 /*
 .hero .container, .hero .container .row, .hero .container .row .one-half.column {
 	height: 100%;
@@ -153,7 +165,6 @@
 
 @media (min-width: 550px) {
   .hero {
-    padding-bottom: 12rem;
     text-align: left;
     background-position: 50% 50%;
   }
@@ -166,15 +177,9 @@
   .hero-heading {
     font-size: 2.6rem;
   }
-  .hero {
-    padding: 16rem 0 14rem;
-  }
 }
 
 @media (min-width: 1000px) {
-  .hero {
-    padding: 22rem 0;
-  }
   .hero-heading {
     font-size: 4.0rem;
   }
@@ -339,6 +344,7 @@
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), transparent);
   background-color: #444;
   color: #ccc;
+  padding: 50px 100px !important;
 }
 
 
